--- a/Unity_Project/.gitignore
+++ b/Unity_Project/.gitignore
@@ -70,3 +70,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Downloadable Assets from Unity Store
+/[Aa]ssets/[Dd]idimo
+/[Aa]ssets/[Bb]rick Project Studio
