--- a/Unity_Project/Packages/manifest.json
+++ b/Unity_Project/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.didimo.sdk.core": "https://github.com/didimoinc/didimo-digital-human-unity-sdk.git?path=/com.didimo.sdk.core#5.0.1",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ai.navigation": "1.1.1",
@@ -11,6 +12,8 @@
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.learn.iet-framework": "3.1.3",
+    "com.unity.postprocessing": "3.2.2",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.purchasing": "4.5.2",
     "com.unity.services.mediation": "1.0.5",
     "com.unity.test-framework": "1.1.33",
