--- a/Unity_Project/Packages/manifest.json
+++ b/Unity_Project/Packages/manifest.json
@@ -21,6 +21,7 @@
     "com.unity.timeline": "1.7.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
+    "com.unity.xr.interaction.toolkit": "2.2.0",
     "com.unity.xr.management": "4.2.0",
     "com.unity.xr.mock-hmd": "1.3.1-preview.1",
     "com.unity.modules.ai": "1.0.0",
