Oculus Integration Asset Added
Oculus Integration for VR Support - Must be downloaded from Unity Asset store.

.gitignore updated to reflect new asset

--- a/Unity_Project/.gitignore
+++ b/Unity_Project/.gitignore
@@ -74,3 +74,4 @@ crashlytics-build.properties
 # Downloadable Assets from Unity Store
 /[Aa]ssets/[Dd]idimo
 /[Aa]ssets/[Bb]rick Project Studio
+/[Aa]ssets/[Oo]culus
