VR Interaction Works
VR environment with Unity is working - Should just need to press play.

Building off some examples within the Oculus asset so that we do not have to reprogram everything from scratch.

--- a/Unity_Project/.gitignore
+++ b/Unity_Project/.gitignore
@@ -75,3 +75,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Dd]idimo
 /[Aa]ssets/[Bb]rick Project Studio
 /[Aa]ssets/[Oo]culus
+/[Aa]ssets/[Tt]extMesh Pro
